Don't use cosmetic GDI pens as this is already accounted for

Since Qt will already handle the cosmetic case when rendering then it
should be respected instead of overriding it by using the cosmetic GDI
pen. This ensures that the pen's width is used and also the color of the
pen.

Task-number: QTBUG-33611
Change-Id: I2719311b3fb5480a5b228c0d415aa545967321cf
Reviewed-by: Jan Arve Sæther <jan-arve.saether@theqtcompany.com>
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>